<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="323dp"
            android:layout_height="55dp"
            android:layout_marginLeft="50dp"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="bold|italic"
            android:gravity="center"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="23dp"
            android:src="@drawable/index"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/fio"
            android:textSize="34dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:gravity="center"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/contact" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profession"
            android:textSize="26dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/skills"
            android:textSize="18dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:gravity="center"
            android:paddingHorizontal="22sp"
            android:text="@string/aboutMe"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educationalInstitution"
            android:gravity="center"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faculty"
            android:gravity="center"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/specialization"
            android:gravity="center"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yearEnding"
            android:gravity="center"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:gravity="center"
            android:textSize="16dp"
            android:layout_marginBottom="50dp"/>


        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="JavaScript"
            android:layout_marginBottom="5sp"
            android:onClick="jsClick"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Java"
            android:layout_marginBottom="5dp"
            android:onClick="javaClick"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Android"
            android:layout_marginBottom="5sp"
            android:onClick="androidClick"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>